# nougat-mcp

./: .gitignore  README.md  pyproject.toml  walkthrough.md
.github/workflows/: publish-pypi.yml
showcase/: 2405.08770v1_page5.md  2405.08770v1_page5.mmd
src/nougat_mcp/: __init__.py  main.py  server.py
tmp/pdfs/: 2405.08770v1_pages5-6.md  2405.08770v1_pages5-6.mmd
