[project]
name = "nougat-mcp"
version = "0.1.0"
description = "MCP server for high-accuracy scientific PDF OCR using Meta's Nougat"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Stamatis Vretinaris" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp>=1.26.0",
    "nougat-ocr==0.1.17",
    "transformers>=4.35,<4.38",
    "albumentations>=1.3,<1.4",
    "huggingface-hub<1.0",
    "pypdfium2<5.0",
    "fsspec<=2025.10.0",
]

[project.scripts]
nougat-mcp = "nougat_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
